@@ -185,6 +185,8 @@ Bugfixes:
 API:
 - added optional parameters "bgColor", "alpha" and "gradientFill" to renderPieChart (defaults are: white / 0.5 / true)
 - added optional parameters "bgColor" and "alpha" renderBarChart (defaults are: white / 0.9)
+- added callback function "tableRendered" called after a table has been rendered
+- callback functions can now also be set globally by updating EditableGrid.prototype
 
 Bugfixes:
 - avoid negative padding when displaying an editor inside a cell
